; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.3.4/src/extr_lauxlib.c_newbox.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.3.4/src/extr_lauxlib.c_newbox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32* }

@.str = private unnamed_addr constant [7 x i8] c"LUABOX\00", align 1
@boxgc = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"__gc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i64)* @newbox to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @newbox(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @lua_newuserdata(i32* %6, i32 16)
  %8 = inttoptr i64 %7 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %8, %struct.TYPE_2__** %5, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i32* null, i32** %10, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i64 @luaL_newmetatable(i32* %13, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* @boxgc, align 4
  %19 = call i32 @lua_pushcfunction(i32* %17, i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @lua_setfield(i32* %20, i32 -2, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  br label %22

22:                                               ; preds = %16, %2
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @lua_setmetatable(i32* %23, i32 -2)
  %25 = load i32*, i32** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = call i8* @resizebox(i32* %25, i32 -1, i64 %26)
  ret i8* %27
}

declare dso_local i64 @lua_newuserdata(i32*, i32) #1

declare dso_local i64 @luaL_newmetatable(i32*, i8*) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1

declare dso_local i8* @resizebox(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
